--- a/package.json
+++ b/package.json
@@ -19,13 +19,11 @@
     "url": "https://github.com/capira12/mathslang/issues"
   },
   "homepage": "https://github.com/capira12/mathslang#readme",
-  "dependencies": {
+  "devDependencies": {
     "bower": "^1.5.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
-    "gulp-rename": "^1.2.2"
-  },
-  "devDependencies": {
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.0"
   }
 }
