--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,28 @@
 {
-  "name": "mathslang",
-  "version": "1.0.1",
-  "homepage": "https://github.com/capira12/mathslang",
-  "authors": [
-    "(Tino Steffens <tino@capira.de>)"
-  ],
-  "description": "mathslang is world's most awesome lib to evaluate mathematical expressions as quiz answers.",
-  "main": "dist/mathslang.min.js",
-  "keywords": [
-    "capira",
-    "mathslang"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "src",
-    "tests"
-  ],
-  "devDependencies": {
-    "jquery": "jQuery#~2.1.4"
-  }
+    "name": "mathslang",
+    "version": "1.0.1",
+    "homepage": "https://github.com/capira12/mathslang",
+    "authors": [
+        "(Tino Steffens <tino@capira.de>)",
+        "(Stephanie Lund <stef@capira.de>)",
+        "(Robin Linus <robin@capira.de>)"
+    ],
+    "description": "mathslang is world's most awesome lib to evaluate mathematical expressions as quiz answers.",
+    "main": "dist/mathslang.min.js",
+    "keywords": [
+        "capira",
+        "mathslang"
+    ],
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "src",
+        "tests"
+    ],
+    "devDependencies": {
+        "jquery": "jQuery#~2.1.4"
+    }
 }
