--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mathslang",
+  "name": "capiraslang",
   "version": "1.0.0",
-  "description": "mathslang is world's most awesome lib to evaluate mathematical expressions as quiz answers",
+  "description": "capiraslang is world's most awesome lib to evaluate quiz answers",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -11,16 +11,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/capira12/mathslang.git"
+    "url": "git+https://github.com/capira12/capiraslang.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/capira12/mathslang/issues"
+    "url": "https://github.com/capira12/capiraslang/issues"
   },
-  "homepage": "https://github.com/capira12/mathslang#readme",
+  "homepage": "https://github.com/capira12/capiraslang#readme",
   "devDependencies": {
     "bower": "^1.5.2",
+    "browser-sync": "^2.8.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
