--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,17 @@
 {
-    "name": "mathslang",
+    "name": "capiraslang",
     "version": "1.0.1",
-    "homepage": "https://github.com/capira12/mathslang",
+    "homepage": "https://github.com/capira12/capiraslang",
     "authors": [
         "(Tino Steffens <tino@capira.de>)",
         "(Stephanie Lund <stef@capira.de>)",
         "(Robin Linus <robin@capira.de>)"
     ],
-    "description": "mathslang is world's most awesome lib to evaluate mathematical expressions as quiz answers.",
-    "main": "dist/mathslang.min.js",
+    "description": "capiraslang is world's most awesome lib to evaluate mathematical expressions as quiz answers.",
+    "main": "dist/capiraslang/capiraslang.min.js",
     "keywords": [
         "capira",
-        "mathslang"
+        "capiraslang"
     ],
     "license": "MIT",
     "ignore": [
